<!--
  ~ Copyright 2019 Maroš Šeleng
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Distance measurements</string>

    <!-- Bottom navigation menu -->
    <string name="menu_measurements">Measurements</string>
    <string name="menu_new_measurement">New measurement</string>
    <string name="menu_positioning">Positioning</string>
    <string name="menu_about">About</string>

    <!-- Measurements list -->
    <string name="measurements_list_measurement_type">Measurement type</string>
    <string name="measurements_list_measurement_type_all">All</string>
    <string name="measurements_list_measurements_empty">No measurements here yet</string>

    <!-- Measurement detail -->
    <string name="measurement_detail_title">Measurement detail</string>
    <string name="measurement_detail_measured_values">Measured values</string>
    <string name="measurement_detail_measured_values_empty">No measured values</string>
    <string name="measurement_detail_measured_values_export_icon">Export measured values to a file</string>
    <string name="measurement_detail_edit_title">Edit measurement</string>
    <string name="measurement_detail_edit_save">Save</string>
    <string name="measurement_detail_graph">Graph</string>
    <string name="measurement_detail_graph_label_real">Real distance</string>
    <string name="measurement_detail_graph_label_measured">Measured distance</string>
    <string name="measurement_detail_graph_export_icon">Export graph to a file</string>
    <!-- Export -->
    <string name="measurement_detail_export_failure">Export failed</string>
    <string name="measurement_detail_export_failure_retry">Try again</string>
    <string name="measurement_detail_export_success">File successfully exported</string>
    <string name="measurement_detail_export_success_view">View</string>
    <string name="measurement_detail_export_access_denied">Can\'t export, storage access denied</string>

    <!-- Storage permissions rationale dialog -->
    <string name="storage_rationale_title">External storage access</string>
    <string name="storage_rationale_message">In order to export the graph and save it on your device, the permission to write into your device\'s storage is required.</string>
    <string name="storage_rationale_allow">Allow</string>

    <!-- Location permissions rationale dialog -->
    <string name="location_rationale_title">Location access</string>
    <string name="location_rationale_message">In order to perform scans and measure the distance, the permission to access your device\'s location is required.</string>
    <string name="location_rationale_allow">Allow</string>

    <!-- WiFi disabled dialog -->
    <string name="wifi_disabled_title">WiFi disabled</string>
    <string name="wifi_disabled_message">In order to perform scans and measure the distance using WiFi, the WiFi needs to be turned on.</string>
    <string name="wifi_disabled_settings">Go to settings</string>

    <!-- WiFi not connected dialog -->
    <string name="wifi_not_connected_title">WiFi not connected</string>
    <string name="wifi_not_connected_message">In order to perform scans and measure the distance using WiFi RSS, the WiFi needs to be connected to a network.</string>
    <string name="wifi_not_connected_settings">Go to settings</string>

    <!-- New measurement -->
    <string name="new_measurement_bluetooth_le">Bluetooth LE</string>
    <string name="new_measurement_wifi_rss">Wifi RSS</string>
    <string name="new_measurement_wifi_rtt">Wifi RTT</string>
    <string name="new_measurement_begin">Begin</string>
    <string name="new_measurement_permission_denied">Can\'t start the measurement, location access denied</string>

    <!-- New Bluetooth measurement -->
    <string name="new_bluetooth_select_device">Select the device to measure the distance from</string>
    <string name="new_bluetooth_select_device_empty">No devices available in the close proximity</string>
    <string name="new_bluetooth_permission_denied">Location permission denied</string>
    <string name="new_bluetooth_bluetooth_off">Bluetooth is off</string>

    <!-- New Wifi RSS measurement -->
    <string name="new_wifi_rss_not_connected">Make sure you are connected to a Wifi network and try again.</string>

    <!-- General measurement -->
    <string name="general_measurement_method_icon_description">Measurement type description icon</string>
    <string name="general_measurement_sampling_rate_hint">Sampling rate (milliseconds)</string>
    <string name="general_measurement_note_hint">Note</string>
    <string name="general_measurement_real_distances_hint">Real distances (comma separated, in order)</string>
    <string name="general_measurement_startstop_start">Start</string>
    <string name="general_measurement_startstop_stopsave">Stop &amp; save</string>
    <string name="general_measurement_startstop_saving">Saving…</string>
    <string name="general_measurement_startstop_saved">Saved</string>
    <string name="general_measurement_startstop_not_saved">Not saved</string>
    <string name="general_measurement_cancel">Cancel</string>
    <string name="general_measurement_measured_values">Measured values</string>
    <string name="general_measurement_measured_values_empty">No values yet…</string>
    <string name="general_measurement_snackbar_saved">Measurement saved</string>
    <string name="general_measurement_snackbar_saved_view">View</string>
    <string name="general_measurement_snackbar_not_saved">Measurement not saved</string>
    <string name="general_measurement_snackbar_not_saved_retry">Retry</string>

    <!-- Positioning -->
    <string name="positioning_add_aps">Add APs for positioning</string>
    <string name="positioning_address">MAC address</string>
    <string name="positioning_name">Device name (optional)</string>
    <string name="positioning_x">Position x (cm)</string>
    <string name="positioning_y">Position y (cm)</string>
    <string name="positioning_add">Add</string>
    <string name="positioning_done">Done</string>
    <string name="positioning_android_9">This feature is only supported on Android 9+</string>

    <!-- About -->
    <string name="about_source_explanation">This application was developed as a part of Diploma thesis at the Faculty of informatics, Masaryk university, Brno, Czechia.</string>
    <string name="about_libraries">List of used open source libraries</string>

</resources>
