<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Maroš Šeleng
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/measurements"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/menu_measurements" />
    <item
        android:id="@+id/newMeasurement"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_new_measurement" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about" />

</menu>