<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:maxLines="1"
        android:text="@string/storage_rationale_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/storage_rationale_message"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    <TextView
        android:id="@+id/allowStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="64dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:maxLines="1"
        android:text="@string/storage_rationale_allow"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:background="?android:selectableItemBackground"/>

    <TextView
        android:id="@+id/cancelStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="64dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:maxLines="1"
        android:text="@android:string/cancel"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:background="?android:selectableItemBackground" />

</LinearLayout>